kubernetes/apps/external/truenas/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app truenas
  namespace: external
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: truenas-nginx
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8080
