kubernetes/apps/external/truenas/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app truenas
  namespace: external
  annotations:
    glance/name: TrueNAS
    glance/show: "true"
    glance/icon: https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/png/truenas-scale.png
    glance/description: "Network-attached storage management."
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - truenas.juno.moe
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 443
